--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>The fall guy</h1>
     <h1>Movie 2024</h1>
     <img src="Screenshot (10).png" alt="The image" height="200" width="300">
+    <p>top movies</p>
+    <h1>Leo</h1>
 </body>
 </html>
