added another movie

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <img src="Screenshot (10).png" alt="The image" height="200" width="300">
     <p>top movies</p>
     <h1>Leo</h1>
+    <h1>Retro</h1>
 </body>
 </html>
